--- a/todo
+++ b/todo
@@ -1,5 +1,21 @@
-sort PolytopeSoup fujnctions
-  accessors
+
+make model.writeXDMFFile private
+MPACT model from polytopesoup
+MPACT model to poly soup 3d
+
+Model.write(convert to soup)
+model.read(convert from soup)
+
+Definitely need a more efficient read/write for mpact model
+
+VERA 1A
+
+write MPACT XDMF with mpact input file
+
+
+clang format directories
+
+loop for addElement
 
 TESTS:
   gmsh
@@ -11,22 +27,23 @@ TESTS:
       overlayCoarseGrid
         Check physical group names and entities.
         Check 2D and 3D models
-  FVM
-    quad
-    tri6
-    quad8
+  mesh
+    regular_partition
+      getChild
+    rectiliner_partition
+      getChild
+    FVM
+      quad
+      tri6
+      quad8
 
 gmsh io no allocations
 
-move getXS
-
 Vector versions of gmsh funcinos
-
-polytope soup elset_names sorted.
-write materials with
-  material data equal to num materials 
+  -> If user space, yes.
 
 Material as an integer set?
+  -> Ensure numbers to output
 
 move on to next dir and save powers and such for spatial partition
 
@@ -39,28 +56,18 @@ faceContaining find closest vertex, then test neighboring faces
   - can use VERY WIDE SIMD to compure distance
   - algroithmica argmin https://en.algorithmica.org/hpc/algorithms/argmin/
 
-FVM 
-
-convenience functions for FVM
-
-polytopeSoup compare numbers
-
 tagged union/variant for tri/quad mesh
 
 binned face vertex mesh fixes everything
 -> Output ratio of areas of cells
-
-Replace epsilons with eps_distance
 
 learn more floating point
 
 Int64
 
 organze archive into many dirs with notes on what is there any why we keep
-enable openMP /TBB
 
-makeMaterialsElset
-  -> convert Material_ to Material with elset data
+enable openMP /TBB
 
 NOLINT
   stdlib
@@ -72,8 +79,6 @@ push_back to emplace_back
   Make another item with this for later
 
 add testing for gcc 12+ and clang15+
-
-check on gmsh intersect
 
 look for ASSUME opportunities, especially around ternary statements
 
@@ -89,6 +94,7 @@ Harden the mesh IO, testing with files created from different software
 VTK output with colors
 
 is_constexpr -> builtin
+
 constexpr tests
 
 CUDA check
@@ -101,8 +107,6 @@ valgrind and cuda test on laptop
 
 allocator
 
-typename to class
-
 Apache 2.0 license
 
 std::isfinite assumes
@@ -111,17 +115,17 @@ Find the conditional jump that depends on uninitialized value in xsec read
 Add material convenience functions that openMC has
 
 Function for plotting XSecs
+
 Check that tests are actually using CUDA
 
 No more examples. Make a "models" directory.
   Add options for each parametric study
 
-Method to function
-
 investigate valgrind release build -> UPGRADE to 3.22
 -> PURE, ASSUME
 
 Add scattering matrix to Xsec
+
 Don't store redundant info? Total
   Optimize to be lower triangular when build without upscatter?
 
@@ -136,8 +140,6 @@ Binned mesh
 
 Back the rays up by -eps
   -> or make AABB bigger
-
-Make the mpact tests work for more types
 
 SIMD versions of routines for mesh.
   point in 4 AABB
@@ -154,8 +156,6 @@ Functions to prevent std::string/std::vector usage in examples and tutorials
 Re-add the requirements non-spack installed
 
 Scripts to install gcc
-
-reserve elements/vertices for submesh and read: spatial_part.toPolytopeSoup
 
 parallelize
 
@@ -207,5 +207,6 @@ FVM
   -> Warn about vertices that are within eps in "validate()"
 
 bump gmsh version
+-> Only enable some of OCC
 
-eliminate stringstring setw(5) Coarse_Cell
+Restore the Make scripts for build dependencies 
