--- a/todo
+++ b/todo
@@ -1,9 +1,8 @@
+split by assembly, lattice, etc. allow each to be read as model
 
 make model.writeXDMFFile private
 MPACT model from polytopesoup
-MPACT model to poly soup 3d
 
-Model.write(convert to soup)
 model.read(convert from soup)
 
 Definitely need a more efficient read/write for mpact model
@@ -12,10 +11,7 @@ VERA 1A
 
 write MPACT XDMF with mpact input file
 
-
 clang format directories
-
-loop for addElement
 
 TESTS:
   gmsh
