--- a/todo
+++ b/todo
@@ -1,3 +1,12 @@
+Double checking stdlib:
+  assert, algorithm, numeric, cstring, vector, string_view, string
+
+
+
+
+
+
+
 Document: 
   Exclusions from clang-tidy
   Clang format choices (var_name, Class, etc.)
@@ -13,6 +22,7 @@ Enhancements:
     How to do this in a smart way? Check on Eigen and others.
   Python API
   Rigorous testing of constexpr functions at compile time and runtime
+  Allocator
 
 CUDA:
   Add CUDA to unit test macro
@@ -31,6 +41,10 @@ check for purity -> noreturn assert
 
 constexpr:
   assert.hpp
-  construct at-> placement new
 
 Need to take a hard look at CUDA before proceeding
+
+Make a vector class which always aligns to 256 bytes (like CUDA).    
+Then in each method, pass the vector  by reference and use __builtin_assume_aligned    
+    
+Additionally, we should us aligned_alloc    
