--- a/todo
+++ b/todo
@@ -48,3 +48,5 @@ Make a vector class which always aligns to 256 bytes (like CUDA).
 Then in each method, pass the vector  by reference and use __builtin_assume_aligned    
     
 Additionally, we should us aligned_alloc    
+
+template library for quadmath
